<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <EditText
            android:layout_width="94dp"
            android:layout_height="37dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/player1Name"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.053"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/player2Name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@+id/titleLabel" app:layout_constraintHorizontal_bias="0.516"
            android:text="@string/p1_name"/>
    <EditText
            android:layout_width="94dp"
            android:layout_height="37dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/player3Name"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintVertical_bias="0.053" app:layout_constraintStart_toEndOf="@+id/player2Name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@+id/titleLabel" android:text="@string/p3_name"/>
    <EditText
            android:layout_width="69dp"
            android:layout_height="65dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/d1"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintTop_toBottomOf="@+id/player1Score" app:layout_constraintVertical_bias="0.097"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:gravity="center_horizontal"/>
    <EditText
            android:layout_width="69dp"
            android:layout_height="65dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/d2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.365"
            app:layout_constraintTop_toBottomOf="@+id/player2Score" app:layout_constraintVertical_bias="0.095"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <EditText
            android:layout_width="69dp"
            android:layout_height="65dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/d4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.891"
            app:layout_constraintTop_toBottomOf="@+id/player3Score"
            app:layout_constraintVertical_bias="0.097" app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_horizontal" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <EditText
            android:layout_width="70dp"
            android:layout_height="54dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/player1Score"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/player2Score"
            app:layout_constraintHorizontal_bias="0.37"
            app:layout_constraintTop_toBottomOf="@+id/player1Name" app:layout_constraintVertical_bias="0.043"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:text="@string/score_start"/>
    <EditText
            android:layout_width="70dp"
            android:layout_height="54dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/player3Score"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toEndOf="@+id/player2Score"
            app:layout_constraintTop_toBottomOf="@+id/player3Name" app:layout_constraintVertical_bias="0.043"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:text="@string/score_start"/>
    <EditText
            android:layout_width="70dp"
            android:layout_height="54dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/player2Score"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toBottomOf="@+id/player2Name"
            app:layout_constraintVertical_bias="0.043"
            android:gravity="center_horizontal" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/score_start"/>
    <EditText
            android:layout_width="69dp"
            android:layout_height="65dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/d3"
            app:layout_constraintHorizontal_bias="0.616"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/player2Score" app:layout_constraintVertical_bias="0.095"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <Button
            android:text="@string/button_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/rollButton"
            app:layout_constraintTop_toBottomOf="@+id/d2"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.124" app:backgroundTint="@android:color/holo_blue_light"
            android:onClick="RollClick"/>
    <TextView
            android:text="@string/roundLabel_label"
            android:layout_width="97dp"
            android:layout_height="28dp" android:id="@+id/roundLabel"
            app:layout_constraintTop_toBottomOf="@+id/rollButton" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.087" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <EditText
            android:layout_width="94dp"
            android:layout_height="37dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/player2Name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintVertical_bias="0.161"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:text="@string/p2_name"/>
    <TextView
            android:layout_width="292dp"
            android:layout_height="147dp" android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/rollButton"
            app:layout_constraintHorizontal_bias="0.495" app:layout_constraintVertical_bias="0.712"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:gravity="center_horizontal"/>
    <TextView
            android:text="@string/title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/titleLabel"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/player2Name" app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
</androidx.constraintlayout.widget.ConstraintLayout>